--- a/app/views/comments/_deleted_comment.html.erb
+++ b/app/views/comments/_deleted_comment.html.erb
@@ -39,7 +39,7 @@
       >
 
         <% if level < 4 %>
-          <div class="pl-2.5 ml-2.5 border-l border-slate-300 dark:border-slate-700 relative">
+          <div class="pl-1 ml-1 sm:pl-2.5 sm:ml-2.5 border-l border-slate-300 dark:border-slate-700 relative">
             <div class="inline-flex gap-1 mt-2 text-soft">
               <%= inline_svg_tag 'icons/reply.svg', class: 'size-3.5' %>
               <span class="text-xs">
@@ -64,7 +64,7 @@
       <button
         data-toggle-replies-target="button"
         data-action="click->toggle-replies#toggleReplies"
-        class="ml-0 mt-1 flex items-center gap-2 rounded-full hover:bg-slate-200/60 dark:hover:bg-slate-700/40 text-muted hover:text-blue-500 transition duration-200 ease-in-out py-1.5 px-3 w-max cursor-pointer"
+        class="ml-2 sm:ml-5 mt-1 flex items-center gap-2 rounded-full hover:bg-slate-200/60 dark:hover:bg-slate-700/40 text-muted hover:text-blue-500 transition duration-200 ease-in-out py-1.5 pl-2 pr-3 w-max cursor-pointer"
       >
         <%= inline_svg_tag 'icons/chevron-down-bold.svg', class: 'size-3.5 transition-transform duration-200 ease-in-out', data: { toggle_replies_target: 'icon' } %>
         <span class="text-xs whitespace-nowrap font-semibold" data-toggle-replies-target="text">
