--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -7,7 +7,7 @@
     <h2 class="subheading">Comments</h2>
   </div>
 
-  <% if current_user.no_teams_in_common?(@run.user) %>
+  <% if @run.user != current_user && current_user.no_teams_in_common?(@run.user) %>
     <div class="flex flex-col items-center justify-center gap-4 my-16 text-rose-600 dark:text-rose-400">
       <%= inline_svg_tag 'icons/lock.svg', class: 'size-14' %>
       <p class="text-center font-semibold">You can only comment on this run if you&#8217;re part of at least one team with this user.</p>
