--- a/app/views/comments/_like_button.html.erb
+++ b/app/views/comments/_like_button.html.erb
@@ -1,7 +1,7 @@
 <% like = comment.likes.find_by(user: current_user) %>
 
 <div id="<%= dom_id(comment, :likes) %>">
-  <% if comment.user != current_user && current_user.no_teams_in_common?(comment.user) %>
+  <% if comment.parent_run.user != current_user && current_user.no_teams_in_common?(comment.parent_run.user) %>
     <% if like.present? %>
       <div class="p-2 rounded-full flex items-center gap-1 text-pink-500">
         <%= inline_svg_tag 'icons/heart-filled.svg', class: 'size-4.5 -my-px shrink-0' %>
