--- a/app/assets/stylesheets/custom/forms.css
+++ b/app/assets/stylesheets/custom/forms.css
@@ -145,6 +145,10 @@
     @apply px-4 py-3 rounded-lg shadow-sm hover:shadow-md dark:shadow-none dark:hover:shadow-none bg-white dark:bg-slate-800/60 dark:hover:bg-slate-700/70 border dark:border-slate-700 peer-checked:border-indigo-600 dark:peer-checked:border-indigo-500 text-light peer-checked:text-indigo-600 dark:peer-checked:text-indigo-500 inline-flex items-center gap-4 w-full cursor-pointer transition duration-200 ease-in-out active:scale-95;
   }
 
+  .form-radio-chip-label {
+    @apply py-2 px-3 rounded-md whitespace-nowrap text-sm text-normal peer-checked:font-semibold cursor-pointer border border-slate-200 dark:border-transparent bg-white dark:bg-slate-800 dark:hover:bg-slate-700/80 hover:shadow dark:hover:shadow-none peer-checked:text-normal-reverse peer-checked:bg-black dark:peer-checked:bg-slate-100 transition duration-200 ease-in-out;
+  }
+
   /* Used to turn a checkbox input into a sliding switch control. */
   .form-input-toggle {
     @apply relative inline-flex h-6 w-11 items-center rounded-full transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 shrink-0;
