--- a/app/views/teams/member/_trends.html.erb
+++ b/app/views/teams/member/_trends.html.erb
@@ -4,37 +4,9 @@
 </div>
 
 <div class="mb-24">
-  <%= form_with url: team_member_path(team, member), method: :get, local: true, html: { novalidate: true }, data: { turbo_frame: 'memberTrends', turbo_action: 'advance', turbo_stream: true, controller: 'custom-date-range form-validation search-form' } do %>
-    <div class="form-group">
-      <%= label_tag :trends_date_range, 'Select date range', class: 'form-label' %>
-
-      <div class="relative flex rounded-md shadow-sm">
-        <!-- Date range select -->
-        <%= select_tag :trends_date_range, options_for_select(['All season', 'This week', 'Last week', 'This month', 'Last month', 'Custom range'], params[:trends_date_range] || 'This week'),
-                        data: { custom_date_range_target: 'select', action: 'custom-date-range#update custom-date-range#search' },
-                        class: 'form-select appearance-none pl-3 pr-10 py-2 border [&:not(:focus)]:border-r-transparent rounded-r-none focus:z-10' %>
-
-        <!-- Group by select -->
-        <%= label_tag :group_by, 'Group by', class: 'sr-only' %>
-        <%= select_tag :group_by, options_for_select([['group by day', 'day'], ['group by week', 'week']], params[:group_by] || 'day'),
-                        data: { action: 'input->search-form#searchNow' },
-                        class: 'form-select appearance-none pl-3 pr-10 py-2 border [&:not(:focus)]:border-l-transparent rounded-l-none w-max focus:z-10' %>
-      </div>
-    </div>
-
-    <div class="hidden form-group" data-custom-date-range-target="startDate">
-      <%= label_tag :trends_start_date, 'Start date', class: 'form-label' %>
-      <%= date_field_tag :trends_start_date, nil, max: Date.yesterday, class: 'form-input', data: { form_validation_target: 'startDate', custom_date_range_target: 'startDateField', action: 'input->form-validation#validateEndDate custom-date-range#search' } %>
-    </div>
-
-    <div class="hidden form-group" data-custom-date-range-target="endDate">
-      <%= label_tag :trends_end_date, 'End date', class: 'form-label' %>
-      <%= date_field_tag :trends_end_date, nil, max: Date.today, class: 'form-input', data: { form_validation_target: 'endDate', custom_date_range_target: 'endDateField', action: 'input->form-validation#validateEndDate custom-date-range#search' } %>
-      <span class="hidden my-1 error-message" data-form-validation-target="endDateError">End date must be today or earlier and must be after start date</span>
-    </div>
-  <% end %>
+  <%= render 'teams/member/trends_date_form', team:, member: %>
 </div>
 
-<%= turbo_frame_tag 'memberTrends' do %>
-  <%= render 'teams/member/trends_graphs', team: team, date_range_description: @trends_date_range_description %>
-<% end %>
+<div id="memberTrends">
+  <%= render 'teams/member/trends_graphs', team:, member:, date_range_description: @trends_date_range_description %>
+</div>
