--- a/app/views/teams/member/_trends_graphs.html.erb
+++ b/app/views/teams/member/_trends_graphs.html.erb
@@ -2,7 +2,7 @@
   <div class="pt-6 mb-4 border-t border-slate-200 dark:border-slate-700 flex flex-wrap items-end gap-x-4 gap-y-1">
     <div>
       <h2 class="subheading">Miles <%= date_range_description.titlecase %></h2>
-      <p class="text-sm text-soft">This graph shows how many miles <%= @member == current_user ? 'you' : @member.first_name %> ran <%= date_range_description %>.</p>
+      <p class="text-sm text-soft">This graph shows how many miles <%= member == current_user ? 'you' : member.first_name %> ran <%= date_range_description %>.</p>
     </div>
 
     <div class="tab-container ml-auto shrink-0" data-chart-type-target="container">
@@ -43,7 +43,7 @@
   <div class="pt-6 mb-4 border-t border-slate-200 dark:border-slate-700 flex flex-wrap items-end gap-x-4 gap-y-1">
     <div>
       <h2 class="subheading">Long Runs <%= date_range_description.titlecase %></h2>
-      <p class="text-sm text-soft">This graph shows how many long runs <%= @member == current_user ? 'you' : @member.first_name %> ran <%= date_range_description %>.</p>
+      <p class="text-sm text-soft">This graph shows how many long runs <%= member == current_user ? 'you' : member.first_name %> ran <%= date_range_description %>.</p>
     </div>
 
     <div class="tab-container ml-auto shrink-0" data-chart-type-target="container">
