--- a/app/views/teams/show/_rankings.html.erb
+++ b/app/views/teams/show/_rankings.html.erb
@@ -4,32 +4,14 @@
 </div>
 
 <div data-controller="filter-gender">
-  <% if @team.require_gender? %>
+  <% if team.require_gender? %>
     <div class="form-group">
       <%= label_tag :gender_filter, 'Filter by gender', class: 'form-label' %>
       <%= select_tag :gender_filter, options_for_select([['All', 'all'], ['Male', 'male'], ['Female', 'female']]), data: { action: 'change->filter-gender#filter', filter_gender_target: 'filter' }, class: 'form-select' %>
     </div>
   <% end %>
 
-  <%= form_with url: team_path(@team), method: :get, local: true, html: { novalidate: true }, data: { turbo_frame: 'teamRankings', turbo_action: 'advance', turbo_stream: true, controller: 'custom-date-range form-validation' } do %>
-    <div class="form-group">
-      <%= label_tag :rankings_date_range, 'Select date range', class: 'form-label' %>
-      <%= select_tag :rankings_date_range, options_for_select(['All season', 'This week', 'Last week', 'This month', 'Last month', 'Custom range'], params[:rankings_date_range]), data: { custom_date_range_target: 'select', action: 'custom-date-range#update custom-date-range#search' }, class: 'form-select' %>
-    </div>
+  <%= render 'teams/show/rankings_date_form', team: %>
 
-    <div class="hidden form-group" data-custom-date-range-target="startDate">
-      <%= label_tag :rankings_start_date, 'Start date', class: 'form-label' %>
-      <%= date_field_tag :rankings_start_date, nil, max: Date.yesterday, class: 'form-input', data: { form_validation_target: 'startDate', custom_date_range_target: 'startDateField', action: 'input->form-validation#validateEndDate custom-date-range#search' } %>
-    </div>
-
-    <div class="hidden form-group" data-custom-date-range-target="endDate">
-      <%= label_tag :rankings_end_date, 'End date', class: 'form-label' %>
-      <%= date_field_tag :rankings_end_date, nil, max: Date.today, class: 'form-input', data: { form_validation_target: 'endDate', custom_date_range_target: 'endDateField', action: 'input->form-validation#validateEndDate custom-date-range#search' } %>
-      <span class="hidden my-1 error-message" data-form-validation-target="endDateError">End date must be today or earlier and must be after start date</span>
-    </div>
-  <% end %>
-
-  <%= turbo_frame_tag 'teamRankings', data: { filter_gender_target: 'turboFrame' } do %>
-    <%= render 'teams/show/rankings_table', team: @team, date_range: @rankings_date_range, date_range_description: @rankings_date_range_description %>
-  <% end %>
+  <%= render 'teams/show/rankings_table', team:, date_range: @rankings_date_range, date_range_description: @rankings_date_range_description %>
 </div>
