--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -18,7 +18,7 @@
       </button>
     </div>
 
-    <%= render 'pinned_message', message: @pinned_message.presence %>
+    <%= render 'pinned_message', message: @pinned_message if @pinned_message %>
   </div>
 
   <div data-controller="pagination scroll" data-pagination-load-more-path-value="<%= load_more_team_topic_messages_path(@team, @topic) %>">
