--- a/app/views/comments/_comments_list.html.erb
+++ b/app/views/comments/_comments_list.html.erb
@@ -1,9 +1,42 @@
-<% comments.each do |comment| %>
-  <% level ||= comment.level %>
+<% if comments.present? %>
+  <% comments.each do |comment| %>
+    <% level ||= comment.level %>
 
-  <% if comment.deleted? %>
-  <%= render 'comments/deleted_comment', comment:, level: %>
-  <% else %>
-  <%= render 'comments/comment', comment:, level: %>
+    <% if comment.deleted? %>
+    <%= render 'comments/deleted_comment', comment:, level: %>
+    <% else %>
+    <%= render 'comments/comment', comment:, level: %>
+    <% end %>
   <% end %>
+<% else %>
+  <% if run.user == current_user %>
+    <% messages = [
+      'Scientists say talking to yourself is a sign of intelligence. So go ahead, drop a comment!',
+      'Either everyone is in awe… or they’re asleep.',
+      'Guess you’ll have to start the conversation yourself… <i>“Wow, what a great run I just had!”</i>',
+      'Not every run gets instant hype, but trust me, people are impressed!',
+      'Your effort speaks for itself. The comments will catch up soon!',
+      'Be proud of your progress! Whether anyone comments or not, this run is a win.',
+    ] %>
+
+    <% messages.append(
+      'Apparently, your run was so legendary that it left everyone speechless!',
+      'Did you run so fast that everyone missed it?',
+    ) if run.pace < 360 %>
+  <% else %>
+    <% messages = [
+      'It’s quieter than a mime convention in here!',
+      'Either everyone is too tired from running… or they’re too lazy to type.',
+      'It’s so boring in here, even the crickets left.',
+    ] %>
+
+    <% messages.append(
+      'This run was so fast, even the comments haven’t caught up yet!'
+    ) if run.pace < 360 %>
+  <% end %>
+
+  <div class="flex flex-col items-center justify-center gap-4 my-24 md:my-32">
+    <p class="font-semibold">No comments yet</p>
+    <p class="text-soft text-center text-sm text-pretty md:max-w-[70%]"><%= raw messages.sample %></p>
+  </div>
 <% end %>
